# webskrap

./: .gitignore  LICENSE  README.md  SKILL.md  benchmarks.py  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  pages.yml  workflow.yml
docs/: api-reference.md  development.md  index.md  llm.txt  llms.txt
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: copy.js
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  client.md  mcp.md  profiles.md  resource-policy.md  sessions.md  stealth.md
scripts/: live_stealth_report.py
src/webskrap/: __init__.py  cli.py  client.py  mcp_server.py  models.py  parsing.py  profiles.py  stealth.py
tests/: live_stealth_helpers.py  test_bot_detection.py  test_bot_detection_headless.py  test_bot_detection_sites_matrix.py  test_browser_integration.py  test_cli.py  test_client_unit.py  test_live_stealth_report.py  test_mcp.py  test_models.py  test_profiles.py  test_stealth.py
web/: next.config.ts  package.json
web/content/: api-reference.md  development.md  index.md
web/content/comparisons/: webskrap-vs-playwright.md
web/content/getting-started/: installation.md  quickstart.md
web/content/guides/: llm-web-scraping.md  python-web-scraping.md  scrape-javascript-pages.md  web-crawling-with-python.md
web/content/user-guide/: cli.md  client.md  humanizer.md  mcp.md  profiles.md  resource-policy.md  sessions.md  stealth.md
web/src/app/: globals.css  layout.tsx  sitemap.ts
web/src/app/(site)/: layout.tsx  page.tsx
web/src/app/docs/: layout.tsx
web/src/app/docs/[[...slug]]/: page.tsx
web/src/app/docs/benchmarks/: page.tsx
web/src/components/: code-block.tsx  code-copy.tsx  copy-button.tsx  docs-sidebar.tsx  theme-toggle.tsx
web/src/components/ui/: sidebar.tsx
web/src/lib/: asset.ts  docs-nav.ts  docs.ts  seo.ts
