[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "webskrap"
version = "0.1.1"
description = "A Playwright-based Python scraping framework with coherent browser profiles and session controls."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "WebSkrap contributors" }
]
keywords = ["browser-automation", "playwright", "scraping", "crawler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "playwright>=1.49",
  "pydantic>=2.8",
  "rich>=13.9",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]
docs = [
  "zensical>=0.0.43",
  "mkdocstrings[python]>=0.27",
  "pymdown-extensions>=10.12",
]

[project.scripts]
webskrap = "webskrap.cli:app"

[project.urls]
Homepage = "https://github.com/kacigaya/webskrap"
Repository = "https://github.com/kacigaya/webskrap"
Issues = "https://github.com/kacigaya/webskrap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webskrap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "browser: requires installed Playwright browsers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
