[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "webskrap"
version = "0.6.1"
description = "A Playwright-based Python scraping framework with coherent browser profiles and session controls."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "kacigaya" }
]
keywords = ["browser-automation", "playwright", "scraping", "crawler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.2",
  "patchright>=1.60.0",
  "playwright>=1.49",
  "pydantic>=2.8",
  "rich>=13.9",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[project.scripts]
webskrap = "webskrap.cli:app"
webskrap-mcp = "webskrap.mcp_server:main"

[project.urls]
Homepage = "https://github.com/kacigaya/webskrap"
Repository = "https://github.com/kacigaya/webskrap"
Issues = "https://github.com/kacigaya/webskrap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webskrap"]

[tool.hatch.build.targets.sdist]
# The web/ frontend ships only to GitHub Pages, never to PyPI.
exclude = ["web", ".github"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "browser: requires installed Playwright browsers",
  "live: hits public third-party bot-detection demos (opt-in via WEBSKRAP_LIVE=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
